src/app/workspace/workspace-view/workspace-view.component.scss
@import "../../../styles/colors";

iframe {
  width: 100vw;
  height: 100vh;
  border: none;
}

.bottom-panel {
  display: flex;
  flex-direction: column;
  width: 100vw;
  position: fixed;
  bottom: 0;
}

.op-info-button {
  width: 38px;
  height: 38px;
  transition: bottom 0.05s;
  z-index: 1000;

  position: fixed;
  left: 96vw;
  bottom: 20px;

  img {
    position: relative;
    top: 1px;
    left: 1px;
    width: 36px;
    height: 36px;
    border-radius: 50%;
  }
}

app-workspace-status-bar {
  width: 100%;
}

app-workspace-identifier {
  width: 400px;
  border-right: 1px solid $gray;
}

.workspace-info {
  .border-right {
    border-right: 1px solid $gray;
  }
}

